--- a/property-halfmap-grid_vedio.html
+++ b/property-halfmap-grid_vedio.html
@@ -157,69 +157,310 @@
   <!--===== PROPERTY AREA STARTS =======-->
   <div class="vl-blog-4-area sp2">
     <div class="container">
+      <!-- Section Heading -->
       <div class="row">
         <div class="col-lg-10 m-auto">
           <div class="vl-blog-1-section-box heading2 text-center space-margin60">
-            <h5><svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
-                <path d="M2.5 20H4.5M4.5 20H10.5M4.5 20V11.452C4.5 10.918 4.5 10.651 4.565 10.402C4.62256 10.1819 4.71725 9.97322 4.845 9.78497C4.99 9.57197 5.191 9.39497 5.593 9.04397L10.394 4.84197C11.14 4.18997 11.513 3.86397 11.932 3.73997C12.302 3.62997 12.697 3.62997 13.067 3.73997C13.487 3.86397 13.861 4.18997 14.607 4.84397L19.407 9.04397C19.809 9.39597 20.01 9.57197 20.155 9.78397C20.283 9.9753 20.3763 10.1813 20.435 10.402C20.5 10.651 20.5 10.918 20.5 11.452V20M10.5 20H14.5M10.5 20V16C10.5 15.4695 10.7107 14.9608 11.0858 14.5858C11.4609 14.2107 11.9696 14 12.5 14C13.0304 14 13.5391 14.2107 13.9142 14.5858C14.2893 14.9608 14.5 15.4695 14.5 16V20M20.5 20H14.5M20.5 20H22.5" stroke="#ED8438" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" />
-              </svg> Our Real Estate Properties</h5>
+            <h5>
+              <svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                <path d="..." stroke="#ED8438" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+              Our Real Estate Properties
+            </h5>
             <div class="space18"></div>
             <h2>Our Properties</h2>
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-6" data-aos="fade-left" data-aos-duration="900">
-        <div class="vl-blog-1-item">
-          <div class="vl-blog-1-thumb image-anime position-relative">
-            <a href="https://www.youtube.com/watch?v=T_rkRsL6t8o" class="popup-youtube ">
-              <img src="assets/img/all-images/blog/blog-img6.png" alt="video thumbnail" class="img-fluid">
-              <span style="
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                font-size: 48px;
-                background: rgba(0, 0, 0, 0.6);
-                color: white;
-                border-radius: 50%;
-                width: 80px;
-                height: 80px;
-                display: flex;
-                align-items: center;
-                justify-content: center;">
-                <i class="fa-solid fa-play"></i>
-              </span>
-            </a>
-          </div>
-          <div class="vl-blog-1-content">
-            <div class="vl-blog-meta">
-              <ul>
-                <li>
-                  <a href="#">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
-                      <path d="M17.4163 19.25V17.4167..." stroke="#424242" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                      <path d="M10.9997 10.0833C13.0247..." stroke="#424242" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                    </svg>
-                    James Carter
+  
+      <!-- Row for 3 video/image cards -->
+      <div class="row">
+  
+        <!-- CARD 1 -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up">
+          <div class="vl-blog-1-item">
+            <div class="s-porpeties-video d-flex justify-content-center align-items-center text-center"
+                 style="background-image: url(assets/img/all-images/blog/blog-img5.png); 
+                        background-position: center; 
+                        background-repeat: no-repeat; 
+                        background-size: cover; 
+                        min-height: 200px; 
+                        border-radius: 12px;">
+              <div>
+                <div class="play-btn mb-4" style="text-align: center;">
+                  <a href="https://www.youtube.com/watch?v=lXKcNihsUZY" class="popup-youtube" style="text-align: center;">
+                    <span style="
+                      width: 80px;
+                      height: 80px;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                      background: rgba(255, 255, 255, 0.2);
+                      border: 2px solid white;
+                      border-radius: 50%;
+                      margin: auto;">
+                      <i class="fa-solid fa-play" style="color: white; font-size: 32px;"></i>
+                    </span>
+                    <div style="color: white; margin-top: 12px;">Play Video</div>
                   </a>
-                </li>
-              </ul>
+                </div>
+              </div>
             </div>
-            <div class="space16"></div>
-            <h4 class="vl-blog-1-title">
-              <a href="blog-detail.html">How to Add Value to Your Home Luxury Modern Living Upgrades</a>
-            </h4>
-            <div class="space20"></div>
-            <div class="vl-blog-1-icon">
-              <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+            <div class="vl-blog-1-content">
+              <div class="vl-blog-meta">
+                <ul>
+                  <li><a href="#">James Carter</a></li>
+                </ul>
+              </div>
+              <div class="space16"></div>
+              <h4 class="vl-blog-1-title">
+                <a href="blog-detail.html">Luxury Modern Living Upgrades</a>
+              </h4>
+              <div class="space20"></div>
+              <div class="vl-blog-1-icon">
+                <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-      
-      
-    </div>
+  
+        <!-- CARD 2 (Duplicate with different image/video link if needed) -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up">
+          <div class="vl-blog-1-item">
+            <div class="s-porpeties-video d-flex justify-content-center align-items-center text-center"
+                 style="background-image: url(assets/img/all-images/blog/blog-img6.png); 
+                        background-position: center; 
+                        background-repeat: no-repeat; 
+                        background-size: cover; 
+                        min-height: 200px; 
+                        border-radius: 12px;">
+              <div>
+                <div class="play-btn mb-4" style="text-align: center;">
+                  <a href="https://www.youtube.com/watch?v=lXKcNihsUZY" class="popup-youtube" style="text-align: center;">
+                    <span style="
+                      width: 80px;
+                      height: 80px;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                      background: rgba(255, 255, 255, 0.2);
+                      border: 2px solid white;
+                      border-radius: 50%;
+                      margin: auto;">
+                      <i class="fa-solid fa-play" style="color: white; font-size: 32px;"></i>
+                    </span>
+                    <div style="color: white; margin-top: 12px;">Play Video</div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="vl-blog-1-content">
+              <div class="vl-blog-meta">
+                <ul>
+                  <li><a href="#">James Carter</a></li>
+                </ul>
+              </div>
+              <div class="space16"></div>
+              <h4 class="vl-blog-1-title">
+                <a href="blog-detail.html">Add Value to Your Home</a>
+              </h4>
+              <div class="space20"></div>
+              <div class="vl-blog-1-icon">
+                <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+        <!-- CARD 3 -->
+        <div class="col-lg-4 col-md-6" data-aos="fade-up">
+          <div class="vl-blog-1-item">
+            <div class="s-porpeties-video d-flex justify-content-center align-items-center text-center"
+                 style="background-image: url(assets/img/all-images/blog/blog-img7.png); 
+                        background-position: center; 
+                        background-repeat: no-repeat; 
+                        background-size: cover; 
+                        min-height: 200px; 
+                        border-radius: 12px;">
+              <div>
+                <div class="play-btn mb-4" style="text-align: center;">
+                  <a href="https://www.youtube.com/watch?v=lXKcNihsUZY" class="popup-youtube" style="text-align: center;">
+                    <span style="
+                      width: 80px;
+                      height: 80px;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                      background: rgba(255, 255, 255, 0.2);
+                      border: 2px solid white;
+                      border-radius: 50%;
+                      margin: auto;">
+                      <i class="fa-solid fa-play" style="color: white; font-size: 32px;"></i>
+                    </span>
+                    <div style="color: white; margin-top: 12px;">Play Video</div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="vl-blog-1-content">
+              <div class="vl-blog-meta">
+                <ul>
+                  <li><a href="#">James Carter</a></li>
+                </ul>
+              </div>
+              <div class="space16"></div>
+              <h4 class="vl-blog-1-title">
+                <a href="blog-detail.html">Design Your Dream Home</a>
+              </h4>
+              <div class="space20"></div>
+              <div class="vl-blog-1-icon">
+                <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6" data-aos="fade-up">
+          <div class="vl-blog-1-item">
+            <div class="s-porpeties-video d-flex justify-content-center align-items-center text-center"
+                 style="background-image: url(assets/img/all-images/blog/blog-img7.png); 
+                        background-position: center; 
+                        background-repeat: no-repeat; 
+                        background-size: cover; 
+                        min-height: 200px; 
+                        border-radius: 12px;">
+              <div>
+                <div class="play-btn mb-4" style="text-align: center;">
+                  <a href="https://www.youtube.com/watch?v=lXKcNihsUZY" class="popup-youtube" style="text-align: center;">
+                    <span style="
+                      width: 80px;
+                      height: 80px;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                      background: rgba(255, 255, 255, 0.2);
+                      border: 2px solid white;
+                      border-radius: 50%;
+                      margin: auto;">
+                      <i class="fa-solid fa-play" style="color: white; font-size: 32px;"></i>
+                    </span>
+                    <div style="color: white; margin-top: 12px;">Play Video</div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="vl-blog-1-content">
+              <div class="vl-blog-meta">
+                <ul>
+                  <li><a href="#">James Carter</a></li>
+                </ul>
+              </div>
+              <div class="space16"></div>
+              <h4 class="vl-blog-1-title">
+                <a href="blog-detail.html">Design Your Dream Home</a>
+              </h4>
+              <div class="space20"></div>
+              <div class="vl-blog-1-icon">
+                <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6" data-aos="fade-up">
+          <div class="vl-blog-1-item">
+            <div class="s-porpeties-video d-flex justify-content-center align-items-center text-center"
+                 style="background-image: url(assets/img/all-images/blog/blog-img7.png); 
+                        background-position: center; 
+                        background-repeat: no-repeat; 
+                        background-size: cover; 
+                        min-height: 200px; 
+                        border-radius: 12px;">
+              <div>
+                <div class="play-btn mb-4" style="text-align: center;">
+                  <a href="https://www.youtube.com/watch?v=lXKcNihsUZY" class="popup-youtube" style="text-align: center;">
+                    <span style="
+                      width: 80px;
+                      height: 80px;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                      background: rgba(255, 255, 255, 0.2);
+                      border: 2px solid white;
+                      border-radius: 50%;
+                      margin: auto;">
+                      <i class="fa-solid fa-play" style="color: white; font-size: 32px;"></i>
+                    </span>
+                    <div style="color: white; margin-top: 12px;">Play Video</div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="vl-blog-1-content">
+              <div class="vl-blog-meta">
+                <ul>
+                  <li><a href="#">James Carter</a></li>
+                </ul>
+              </div>
+              <div class="space16"></div>
+              <h4 class="vl-blog-1-title">
+                <a href="blog-detail.html">Design Your Dream Home</a>
+              </h4>
+              <div class="space20"></div>
+              <div class="vl-blog-1-icon">
+                <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6" data-aos="fade-up">
+          <div class="vl-blog-1-item">
+            <div class="s-porpeties-video d-flex justify-content-center align-items-center text-center"
+                 style="background-image: url(assets/img/all-images/blog/blog-img7.png); 
+                        background-position: center; 
+                        background-repeat: no-repeat; 
+                        background-size: cover; 
+                        min-height: 200px; 
+                        border-radius: 12px;">
+              <div>
+                <div class="play-btn mb-4" style="text-align: center;">
+                  <a href="https://www.youtube.com/watch?v=lXKcNihsUZY" class="popup-youtube" style="text-align: center;">
+                    <span style="
+                      width: 80px;
+                      height: 80px;
+                      display: flex;
+                      align-items: center;
+                      justify-content: center;
+                      background: rgba(255, 255, 255, 0.2);
+                      border: 2px solid white;
+                      border-radius: 50%;
+                      margin: auto;">
+                      <i class="fa-solid fa-play" style="color: white; font-size: 32px;"></i>
+                    </span>
+                    <div style="color: white; margin-top: 12px;">Play Video</div>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <div class="vl-blog-1-content">
+              <div class="vl-blog-meta">
+                <ul>
+                  <li><a href="#">James Carter</a></li>
+                </ul>
+              </div>
+              <div class="space16"></div>
+              <h4 class="vl-blog-1-title">
+                <a href="blog-detail.html">Design Your Dream Home</a>
+              </h4>
+              <div class="space20"></div>
+              <div class="vl-blog-1-icon">
+                <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div> <!-- end row -->
+    </div> <!-- end container -->
   </div>
+  
   <!--===== PROPERTY AREA ENDS =======-->
   <!--===== FOOTER AREA STARTS =======-->
   <div class="vl-footer4-section-area" style="background-image: url(assets/img/all-images/bg/team-bg1.png); background-position: center; background-repeat: no-repeat; background-size: cover; padding: 60px 0;">
