--- a/about-us.html
+++ b/about-us.html
@@ -70,8 +70,8 @@
                   </li>
                   <li><a href="#">Video <span><i class="fa-solid fa-angle-down d-lg-inline d-none"></i></span></a>
                     <ul class="sub-menu">
-                      <li><a href="property-halfmap-grid.html">Housing Plot</a></li>
-                      <li><a href="property-halfmap-grid.html">Other Properties</a></li>
+                      <li><a href="property-halfmap-grid_vedio.html">Housing Plot</a></li>
+                      <li><a href="property-halfmap-grid_vedio.html">Other Properties</a></li>
                     </ul>
                   </li>
                   <li><a href="testmonial.html">Testimonial <span></span></a>
