--- a/about-us.html
+++ b/about-us.html
@@ -64,14 +64,14 @@
                   </li>
                   <li><a href="#">Layouts<span><i class="fa-solid fa-angle-down d-lg-inline d-none"></i></span></a>
                     <ul class="sub-menu">
-                      <li><a href="property-halfmap-grid.html">Housing Plot</a></li>
-                       <li><a href="property-halfmap-grid.html">Other Properties</a></li>
+                      <li><a href="house_property.html">Housing Plot</a></li>
+                       <li><a href="other_property.html">Other Properties</a></li>
                     </ul>
                   </li>
                   <li><a href="#">Video <span><i class="fa-solid fa-angle-down d-lg-inline d-none"></i></span></a>
                     <ul class="sub-menu">
-                      <li><a href="property-halfmap-grid_vedio.html">Housing Plot</a></li>
-                      <li><a href="property-halfmap-grid_vedio.html">Other Properties</a></li>
+                      <li><a href="house_property_vedio.html">Housing Plot</a></li>
+                      <li><a href="vedio_other_property.html">Other Properties</a></li>
                     </ul>
                   </li>
                   <li><a href="testmonial.html">Testimonial <span></span></a>
@@ -545,7 +545,7 @@
       <!-- Copyright -->
       <div class="row mt-5 pt-4 border-top">
         <div class="col-lg-6 text-lg-start text-center mb-2 mb-lg-0">
-          <p class="mb-0">© 2025 Housa, Inc. All Rights Reserved.</p>
+          <p class="mb-0">© 2025 Copyright Sree Krishna Foundation - All Rights Reserved</p>
         </div>
         <div class="col-lg-6 text-lg-end text-center">
           <ul class="list-inline mb-0">
