--- a/house_property_vedio.html
+++ b/house_property_vedio.html
@@ -20,9 +20,8 @@
   <link rel="stylesheet" href="assets/css/plugins/swiper-slider.css">
   <link rel="stylesheet" href="assets/css/plugins/odometer.css">
   <link rel="stylesheet" href="assets/css/main.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/magnific-popup/dist/magnific-popup.css">
 </head>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/magnific-popup/dist/magnific-popup.css">
+
 <body class="body1" style="overflow-x: hidden !important;">
   <!--===== PRELOADER STARTS =======-->
   <div class="preloader">
@@ -65,14 +64,14 @@
                   </li>
                   <li><a href="#">Layouts<span><i class="fa-solid fa-angle-down d-lg-inline d-none"></i></span></a>
                     <ul class="sub-menu">
-                      <li><a href="property-halfmap-grid.html">Housing Plot</a></li>
-                       <li><a href="property-halfmap-grid.html">Other Properties</a></li>
+                      <li><a href="house_property.html">Housing Plot</a></li>
+                       <li><a href="other_property.html">Other Properties</a></li>
                     </ul>
                   </li>
                   <li><a href="#">Video <span><i class="fa-solid fa-angle-down d-lg-inline d-none"></i></span></a>
                     <ul class="sub-menu">
-                      <li><a href="property-halfmap-grid.html">Housing Plot</a></li>
-                      <li><a href="property-halfmap-grid.html">Other Properties</a></li>
+                      <li><a href="house_property_vedio.html">Housing Plot</a></li>
+                      <li><a href="vedio_other_property.html">Other Properties</a></li>
                     </ul>
                   </li>
                   <li><a href="testmonial.html">Testimonial <span></span></a>
@@ -522,7 +521,7 @@
       <!-- Copyright -->
       <div class="row mt-5 pt-4 border-top">
         <div class="col-lg-6 text-lg-start text-center mb-2 mb-lg-0">
-          <p class="mb-0">© 2025 Housa, Inc. All Rights Reserved.</p>
+          <p class="mb-0">© 2025 Copyright Sree Krishna Foundation - All Rights Reserved</p>
         </div>
         <div class="col-lg-6 text-lg-end text-center">
           <ul class="list-inline mb-0">
