--- a/house_property_vedio.html
+++ b/house_property_vedio.html
@@ -134,13 +134,13 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="inner-header heading1">
-            <h2>Property Half Map Grid</h2>
+            <h2>House Plots</h2>
             <div class="space28"></div>
             <p><a href="index.html">Home</a> <svg xmlns="http://www.w3.org/2000/svg" width="9" height="16" viewBox="0 0 9 16" fill="none">
                 <path d="M1.5 1.74997L7.75 7.99997L1.5 14.25" stroke="#1B1B1B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
               </svg> <span>Listing</span> <svg xmlns="http://www.w3.org/2000/svg" width="9" height="16" viewBox="0 0 9 16" fill="none">
                 <path d="M1.5 1.74997L7.75 7.99997L1.5 14.25" stroke="#1B1B1B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-              </svg> Property Half Map Grid</p>
+              </svg> House Plots</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -167,7 +167,7 @@
               Our Real Estate Properties
             </h5>
             <div class="space18"></div>
-            <h2>Our Properties</h2>
+            <h2>House Plots</h2>
           </div>
         </div>
       </div>
