--- a/other_property.html
+++ b/other_property.html
@@ -97,7 +97,7 @@
       <div class="vl-offcanvas-wrapper">
         <div class="vl-offcanvas-header d-flex justify-content-between align-items-center mb-90">
           <div class="vl-offcanvas-logo">
-            <a href="index-2.html"><img src="assets/img/logo/logo1.png" alt="housa"></a>
+            <a href="index.html"><img src="assets/img/logo/logo sree.png" alt="housa"></a>
           </div>
           <div class="vl-offcanvas-close">
             <button class="vl-offcanvas-close-toggle"><i class="fa-solid fa-xmark"></i></button>
@@ -134,13 +134,13 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="inner-header heading1">
-            <h2>Property Half Map Grid</h2>
+            <h2> Other Properties</h2>
             <div class="space28"></div>
             <p><a href="index.html">Home</a> <svg xmlns="http://www.w3.org/2000/svg" width="9" height="16" viewBox="0 0 9 16" fill="none">
                 <path d="M1.5 1.74997L7.75 7.99997L1.5 14.25" stroke="#1B1B1B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
               </svg> <span>Listing</span> <svg xmlns="http://www.w3.org/2000/svg" width="9" height="16" viewBox="0 0 9 16" fill="none">
                 <path d="M1.5 1.74997L7.75 7.99997L1.5 14.25" stroke="#1B1B1B" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-              </svg> Property Half Map Grid</p>
+              </svg> Properties</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -163,7 +163,7 @@
                 <path d="M2.5 20H4.5M4.5 20H10.5M4.5 20V11.452C4.5 10.918 4.5 10.651 4.565 10.402C4.62256 10.1819 4.71725 9.97322 4.845 9.78497C4.99 9.57197 5.191 9.39497 5.593 9.04397L10.394 4.84197C11.14 4.18997 11.513 3.86397 11.932 3.73997C12.302 3.62997 12.697 3.62997 13.067 3.73997C13.487 3.86397 13.861 4.18997 14.607 4.84397L19.407 9.04397C19.809 9.39597 20.01 9.57197 20.155 9.78397C20.283 9.9753 20.3763 10.1813 20.435 10.402C20.5 10.651 20.5 10.918 20.5 11.452V20M10.5 20H14.5M10.5 20V16C10.5 15.4695 10.7107 14.9608 11.0858 14.5858C11.4609 14.2107 11.9696 14 12.5 14C13.0304 14 13.5391 14.2107 13.9142 14.5858C14.2893 14.9608 14.5 15.4695 14.5 16V20M20.5 20H14.5M20.5 20H22.5" stroke="#ED8438" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" />
               </svg> Our Real Estate Properties</h5>
             <div class="space18"></div>
-            <h2>Our Properties</h2>
+            <h2>Other Properties</h2>
           </div>
         </div>
       </div>
@@ -171,20 +171,9 @@
         <div class="col-lg-4  col-md-6" data-aos="fade-left" data-aos-duration="900">
           <div class="vl-blog-1-item">
             <div class="vl-blog-1-thumb image-anime">
-              <img src="assets/img/all-images/blog/blog-img4.png" alt="housa">
+              <img src="assets/img/all-images/hero/other_proprety_1.jpeg" alt="housa">
             </div>
             <div class="vl-blog-1-content">
-            
-              <div class="vl-blog-meta">
-                <ul>
-                  <li>
-                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 22 22" fill="none">
-                        <path d="M17.4163 19.25V17.4167C17.4163 16.4442 17.03 15.5116 16.3424 14.8239C15.6548 14.1363 14.7221 13.75 13.7497 13.75H8.24967C7.27721 13.75 6.34458 14.1363 5.65695 14.8239C4.96932 15.5116 4.58301 16.4442 4.58301 17.4167V19.25" stroke="#424242" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                        <path d="M10.9997 10.0833C13.0247 10.0833 14.6663 8.44171 14.6663 6.41667C14.6663 4.39162 13.0247 2.75 10.9997 2.75C8.97463 2.75 7.33301 4.39162 7.33301 6.41667C7.33301 8.44171 8.97463 10.0833 10.9997 10.0833Z" stroke="#424242" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                      </svg> Autumn Phillips</a>
-                  </li>
-                </ul>
-              </div>
               <div class="space16"></div>
               <h4 class="vl-blog-1-title"><a href="blog-detail.html">Luxury Living Smart Investments If What PerfectYou Need to Know</a></h4>
               <div class="space20"></div>
@@ -197,7 +186,7 @@
         <div class="col-lg-4  col-md-6" data-aos="fade-left" data-aos-duration="900">
           <div class="vl-blog-1-item">
             <div class="vl-blog-1-thumb image-anime">
-              <img src="assets/img/all-images/blog/blog-img5.png" alt="housa">
+              <img src="assets/img/all-images/hero/other_proprety_2.jpeg" alt="housa">
             </div>
             <div class="vl-blog-1-content">
               
@@ -213,7 +202,7 @@
         <div class="col-lg-4  col-md-6" data-aos="fade-left" data-aos-duration="900">
           <div class="vl-blog-1-item">
             <div class="vl-blog-1-thumb image-anime">
-              <img src="assets/img/all-images/blog/blog-img6.png" alt="housa">
+              <img src="assets/img/all-images/hero/other_proprety_3.jpeg" alt="housa">
             </div>
             <div class="vl-blog-1-content">
               <div class="space16"></div>
@@ -230,7 +219,7 @@
         <div class="col-lg-4  col-md-6" data-aos="fade-left" data-aos-duration="900">
           <div class="vl-blog-1-item">
             <div class="vl-blog-1-thumb image-anime">
-              <img src="assets/img/all-images/blog/blog-img4.png" alt="housa">
+              <img src="assets/img/all-images/hero/other_proprety_4.jpeg" alt="housa">
             </div>
             <div class="vl-blog-1-content">
               <div class="space16"></div>
@@ -245,7 +234,7 @@
         <div class="col-lg-4  col-md-6" data-aos="fade-left" data-aos-duration="900">
           <div class="vl-blog-1-item">
             <div class="vl-blog-1-thumb image-anime">
-              <img src="assets/img/all-images/blog/blog-img5.png" alt="housa">
+              <img src="assets/img/all-images/hero/other_proprety_5.jpeg" alt="housa">
             </div>
             <div class="vl-blog-1-content">
               <div class="space16"></div>
@@ -260,54 +249,7 @@
         <div class="col-lg-4  col-md-6" data-aos="fade-left" data-aos-duration="900">
           <div class="vl-blog-1-item">
             <div class="vl-blog-1-thumb image-anime">
-              <img src="assets/img/all-images/blog/blog-img6.png" alt="housa">
-            </div>
-            <div class="vl-blog-1-content">
-              <div class="space16"></div>
-              <h4 class="vl-blog-1-title"><a href="blog-detail.html">How to Add Value to Your Home Luxury Modern Living Upgrades</a></h4>
-              <div class="space20"></div>
-              <div class="vl-blog-1-icon">
-                <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-4  col-md-6" data-aos="fade-left" data-aos-duration="900">
-          <div class="vl-blog-1-item">
-            <div class="vl-blog-1-thumb image-anime">
-              <img src="assets/img/all-images/blog/blog-img4.png" alt="housa">
-            </div>
-            <div class="vl-blog-1-content">
-              <div class="space16"></div>
-              <h4 class="vl-blog-1-title"><a href="blog-detail.html">Luxury Living Smart Investments If What PerfectYou Need to Know</a></h4>
-              <div class="space20"></div>
-              <div class="vl-blog-1-icon">
-                <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4  col-md-6" data-aos="fade-left" data-aos-duration="900">
-          <div class="vl-blog-1-item">
-            <div class="vl-blog-1-thumb image-anime">
-              <img src="assets/img/all-images/blog/blog-img5.png" alt="housa">
-            </div>
-            <div class="vl-blog-1-content">
-              <div class="space16"></div>
-              <h4 class="vl-blog-1-title"><a href="blog-detail.html">How to Make Your Property Stand Out in a Competitive Best Market</a></h4>
-              <div class="space20"></div>
-              <div class="vl-blog-1-icon">
-                <a href="blog-detail.html" class="readmore">Learn More <i class="fa-solid fa-arrow-right"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4  col-md-6" data-aos="fade-left" data-aos-duration="900">
-          <div class="vl-blog-1-item">
-            <div class="vl-blog-1-thumb image-anime">
-              <img src="assets/img/all-images/blog/blog-img6.png" alt="housa">
+              <img src="assets/img/all-images/hero/other_proprety_6.jpeg" alt="housa">
             </div>
             <div class="vl-blog-1-content">
               <div class="space16"></div>
