--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               <img src="assets/img/all-images/p-location/house.jpg" alt="housa">
             </div>
             <div class="content-area">
-              <a href="property-halfmap-list.html">House Plots</a> 
+              <a href="house_property.html">House Plots</a> 
             </div>
           </div>
         </div>
@@ -262,7 +262,7 @@
               <img src="assets/img/all-images/p-location/otherplots.jpg" alt="housa">
             </div>
             <div class="content-area">
-              <a href="property-halfmap-list.html">Other Plots</a>  
+              <a href="other_property.html">Other Properties</a>  
             </div>
           </div>
         </div>
