--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row align-items-center row-bg1">
           <div class="col-lg-2 col-md-6 col-6">
             <div class="vl-logo">
-              <a href="index-4.html"><img src="assets/img/logo/logo sree.png" alt="housa"></a>
+              <a href="index.html"><img src="assets/img/logo/logo sree.png" alt="housa"></a>
             </div>
           </div>
           <div class="col-lg-7 d-none d-lg-block">
@@ -86,23 +86,31 @@
               </nav>
             </div>
           </div> 
+          <div class="col-lg-2 col-md-6 col-6 d-lg-none d-block">
+            <div class="vl-header-action-item d-block d-lg-none">
+              <button type="button" class="vl-offcanvas-toggle">
+                <i class="fa-solid fa-bars-staggered"></i>
+              </button>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </header>
   <!--=====HEADER END =======-->
   <!--===== MOBILE HEADER STARTS =======-->
-  <div class="homepage4-body">
+  <div class="homepage2-body">
     <div class="vl-offcanvas">
       <div class="vl-offcanvas-wrapper">
         <div class="vl-offcanvas-header d-flex justify-content-between align-items-center mb-90">
           <div class="vl-offcanvas-logo">
-            <a href="index-2.html"><img src="assets/img/logo/logo sree.png" alt="housa"></a>
+            <a href="index.html"><img src="assets/img/logo/logo sree.png" alt="housa"></a>
           </div>
           <div class="vl-offcanvas-close">
             <button class="vl-offcanvas-close-toggle"><i class="fa-solid fa-xmark"></i></button>
           </div>
         </div>
+        
         <div class="vl-offcanvas-menu d-lg-none mb-40">
           <nav></nav>
         </div>
@@ -110,9 +118,9 @@
         <div class="vl-offcanvas-info">
           <h3 class="vl-offcanvas-sm-title">Contact Us</h3>
           <div class="space20"></div>
-          <span><a href="#"> <i class="fa-regular fa-envelope"></i> +57 9954 6476</a></span>
-          <span><a href="#"><i class="fa-solid fa-phone"></i> hello@exdos.com</a></span>
-          <span><a href="#"><i class="fa-solid fa-location-dot"></i> Bhemeara,Kushtia</a></span>
+          <span><a href="#"> <i class="fa-regular fa-envelope"></i>sreekrishnafoundationkk@gmail.com</a></span>
+          <span><a href="#"><i class="fa-solid fa-phone"></i>+91 9843962999</a></span>
+          <span><a href="#"><i class="fa-solid fa-location-dot"></i> 43 A,Near Sivan Kovil,Rajapathai, Vadasery.</a></span>
         </div>
         <div class="space20"></div>
         <div class="vl-offcanvas-social">
