--- a/about-us.html
+++ b/about-us.html
@@ -47,7 +47,7 @@
         <div class="row align-items-center row-bg1">
           <div class="col-lg-2 col-md-6 col-6">
             <div class="vl-logo">
-              <a href="index-4.html"><img src="assets/img/logo/logo sree.png" alt="housa"></a>
+              <a href="index.html"><img src="assets/img/logo/logo sree.png" alt="housa"></a>
             </div>
           </div>
           <div class="col-lg-7 d-none d-lg-block">
@@ -97,7 +97,7 @@
       <div class="vl-offcanvas-wrapper">
         <div class="vl-offcanvas-header d-flex justify-content-between align-items-center mb-90">
           <div class="vl-offcanvas-logo">
-            <a href="index-2.html"><img src="assets/img/logo/logo1.png" alt="housa"></a>
+            <a href="index-2.html"><img src="assets/img/logo/logo sree.png" alt="housa"></a>
           </div>
           <div class="vl-offcanvas-close">
             <button class="vl-offcanvas-close-toggle"><i class="fa-solid fa-xmark"></i></button>
