--- a/house_property_vedio.html
+++ b/house_property_vedio.html
@@ -479,10 +479,10 @@
           <div class="footer-widget-area">
             <h3>Links</h3>
             <ul class="list-unstyled">
-              <li><a href="index-2.html">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="about-us.html">About Us</a></li>
-              <li><a href="our-service.html">Services</a></li>
-              <li><a href="property-halfmap-grid.html">Properties</a></li>
+              <li><a href="testmonial.html">Testimonial</a></li>
+              <li><a href="house_property.html">Properties</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
